--- a/style.css
+++ b/style.css
@@ -6,4 +6,12 @@
             display: flex;
             justify-content: space-around;
             padding: 24px 0;
+
+
+        }
+
+        .cabecalho-lista-item{
+            display: inline-block;
+            margin: 0 20px;
+            padding: 10px 0;
         }
