--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
         header{
             background-color: aqua;
-            color:black
+            color:black;
             display: flex;
             justify-content: space-around;
             padding: 24px 0;
