--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     padding:0;}
 
         header{
-            background-color: aqua;
+            background-color: rgb(96, 241, 241);
             color:black;
             display: flex;
             justify-content: space-around;
@@ -15,4 +15,5 @@
             display: inline-block;
             margin: 0 20px;
             padding: 10px 0;
+            font-size: 24px;
         }
